# intelligent-system

./: .env  Dockerfile  Makefile  docker-compose.yaml  docker-compose.yml  pyproject.toml
api/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
api/src/: main.py
api/src/adapter/: health_controller.py
api/src/adapter/inward/: predict_controller.py  predict_message_consumer.py  test.py
api/src/adapter/outward/: predict_callback.py
api/src/core/: asynchronous_processing_use_case.py  synchronous_processing_use_case.py
api/src/core/ports/incoming/: __init__.py  asynchronous_processing_port.py  synchronous_processing_port.py
api/src/core/ports/outcoming/: __init__.py  message_dispatcher_port.py  model_port.py
mlflow/: log_pyfunc_model.py  mlflow-server.Dockerfile  pyproject.toml
src/: config.yaml  main.py  rest_api_application.py
src/application/: fastapi_entrypoint.py  fastapi_factory.py  nats_entrypoint.py  nats_factory.py
src/application/adapters/: fastapi_entrypoint.py  fastapi_factory.py  nats_entrypoint.py  nats_factory.py
src/application/interfaces/: application_factory.py  entrypoint.py
src/application/ports/: application_factory.py
src/applications/: execution_strategy.py  fastapi_entrypoint.py  fastapi_factory.py  rest_api.py
src/applications/interfaces/: application_factory.py  entrypoint.py
src/core/adapter/: model_adapter.py  predict_controller.py
src/core/adapters/: mlflow_repository.py  model_adapter.py  predict_controller.py  predict_message_consumer.py
src/core/port/: model_port.py  request_handler_port.py
(+22 files in other folders)
