[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ygor Tavela <ygortavela@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "0.78.0"
uvicorn = "0.17.6"
pre-commit = "^2.19.0"
black = "^22.3.0"
pylint = "^2.13.9"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pylint.MESSAGE_CONTROL]
disable = """
    missing-module-docstring,
    missing-function-docstring,
"""
enable = "useless-suppression"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
